--- a/package.json
+++ b/package.json
@@ -9,34 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@auth/prisma-adapter": "^1.0.14",
+    "@prisma/client": "^5.7.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.44.1",
     "@trpc/next": "^10.44.1",
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
+    "@uploadthing/react": "^6.0.2",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dompurify": "^3.0.6",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
-    "prisma": "^5.6.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1",
+    "react-player": "^2.13.0",
     "react-spinners": "^0.13.8",
     "sonner": "^1.2.3",
+    "stripe": "^14.7.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "uploadthing": "^6.0.3",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "nodemailer": "^6.9.8",
     "postcss": "^8",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
